--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -84,9 +84,14 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: $font-rubik;
+}
+
+h1,
+h2,
+h3 {
   line-height: 1em;
   margin-bottom: .4em;
-  font-family: $font-rubik;
 }
 
 p {
