add width to searchbar-container

--- a/src/style/Input.scss
+++ b/src/style/Input.scss
@@ -113,6 +113,7 @@ input {
     display: flex;
     align-items: center;
     border-radius: 8px;
+    width: 100%;
 
     input {
         padding: .5rem calc(1.6rem + 24px);
