--- a/src/style/LandingPage.scss
+++ b/src/style/LandingPage.scss
@@ -29,7 +29,7 @@
 
     .grid-menus-container {
         width: 100%;
-        flex-basis: 38vh;
+        flex-basis: 35vh;
         display: flex;
         gap: .8rem;
         flex-wrap: wrap;
@@ -39,14 +39,26 @@
             width: 100%;
 
             .grid-menu {
+                position: relative;
                 overflow: hidden;
-                padding: 1rem;
+                padding: 1rem 2.8rem;
                 height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 border-radius: 10px;
-                color: $primary-dark;
+
+                h4 {
+                    font-weight: 600;
+                    color: $secondary-dark-1;
+                    transition: 150ms ease-out color;
+                }
+
+                &:hover {
+                    h4 {
+                        color: $primary-dark;
+                    }
+                }
             }
         }
 
@@ -63,13 +75,31 @@
                 flex: .4;
 
                 #left-item {
+                    background-image: url(../assets/image/sunglasses.png);
+                    background-position: top right;
+                    background-repeat: no-repeat;
+                    background-size: 46%;
                     background-color: $accent-lightblue;
                     flex: .45;
+                    transition: 320ms ease-out background-size;
+                
+                    &:hover {
+                        background-size: 49%;
+                    }
                 }
                 
                 #right-item {
+                    background-image: url(../assets/image/mask.png);
+                    background-position: bottom right;
+                    background-repeat: no-repeat;
+                    background-size: 30%;
                     background-color: $accent-red;
                     flex: .55;
+                    transition: 320ms ease-out background-size;
+                
+                    &:hover {
+                        background-size: 33%;
+                    }
                 }
 
                 .grid-menu {
@@ -79,8 +109,21 @@
             }
 
             #bottom-item {
+                background-image: url(../assets/image/scribble-1.png), url(../assets/image/scribble-2.png);
+                background-position: bottom left, top right;
+                background-repeat: no-repeat;
+                background-size: 40%;
                 background-color: $accent-paleblue;
                 flex: .6;
+                transition: 320ms ease-out background-size;
+                
+                &:hover {
+                    background-size: 43%;
+                }
+
+                h4 {
+                    font-size: 1.2em;
+                }
             }
         }
 
@@ -89,7 +132,24 @@
             flex: 1;
 
             #center-item {
+                background-image: url(../assets/image/character-1.png), url(../assets/image/accent-1.png);
+                background-position: bottom right, bottom center;
+                background-repeat: no-repeat;
+                background-size: 80%, 100%;
+                padding: 2rem 2.8rem;
+                align-items: flex-start;
+                justify-content: flex-start;
                 background-color: $accent-tosca;
+                transition: 320ms ease-out background-size;
+                
+                &:hover {
+                    background-size: 83%, 100%;
+                }
+
+                h4 {
+                    width: min(100%, 15rem);
+                    font-size: 1.4em;
+                }
             }
         }
 
@@ -101,13 +161,35 @@
             flex: .8;
 
             #top-item {
+                background-image: url(../assets/image/foot-1.png);
+                background-position: top left;
+                background-repeat: no-repeat;
+                background-size: 55%;
                 background-color: $accent-blue;
                 flex: .65;
+                transition: 320ms ease-out background-size;
+                
+                &:hover {
+                    background-size: 58%;
+                }
+
+                h4 {
+                    font-size: 1.2em;
+                }
             }
 
             #bottom-item {
+                background-image: url(../assets/image/scribble-3.png);
+                background-position: bottom right;
+                background-repeat: no-repeat;
+                background-size: 35%;
                 background-color: $accent-salmon;
                 flex: .35;
+                transition: 320ms ease-out background-size;
+                
+                &:hover {
+                    background-size: 38%;
+                }
             }
         }
     }
@@ -129,6 +211,7 @@
 
 .privacy-policy-container {
     @include page-content;
+    overflow: hidden;
     height: 50ch;
     display: flex;
     gap: 3rem;
@@ -166,7 +249,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4.4rem;
+    gap: 4rem;
     
     .content-row {
         position: relative;
@@ -174,7 +257,7 @@
         gap: 2rem;
         
         &:nth-child(2) {
-            padding-top: 1.2rem;
+            padding-top: 2rem;
             border-top: 1px solid $shade-3;
         }
     
@@ -217,18 +300,19 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 1.2rem;
+        padding-top: 2rem;
         border-top: 1px solid $shade-3;
 
         h1 {
-            margin-bottom: 2.5rem;
+            margin-bottom: 2.8rem;
         }
     }
 
     .member-wrapper {
+        overflow: hidden;
         display: flex;
         justify-content: center;
-        gap: 3rem;
+        gap: 6rem;
         flex-wrap: wrap;
         width: min(100%, 70rem);
 
@@ -239,6 +323,7 @@
 
             img {
                 height: 15rem;
+                margin-bottom: 1rem;
             }
         }
     }
@@ -320,6 +405,12 @@
 
     h3 {
         margin-bottom: 1em;
+    }
+
+    p {
+        &.error {
+            color: $accent-darkred;
+        }
     }
 }
 
