--- a/src/style/CreatePackage.scss
+++ b/src/style/CreatePackage.scss
@@ -1,4 +1,4 @@
-.create-place-container {
+.create-package-container {
     @include page-content;
     display: flex;
     justify-content: center;
