--- a/src/style/PackageDetails.scss
+++ b/src/style/PackageDetails.scss
@@ -1,5 +1,7 @@
 .package-details-container {
     @include page-content;
+    overflow: hidden;
+    position: relative;
     display: flex;
     height: calc(100vh - 4.6rem);
     gap: 3rem;
@@ -18,6 +20,33 @@
     section {
         flex: 1;
         height: 100%;
+
+        .places-wrapper {
+            .places-container {
+                height: 15rem;
+                overflow: auto;
+                
+                h3 {
+                    margin-bottom: 1rem;
+                }
+
+                .place-wrapper {
+                    display: flex;
+                    align-items: center;
+                    gap: 1.4rem;
+                    margin-bottom: .6rem;
+        
+                    .img {
+                        height: 4rem;
+                        width: 4rem;
+                        border-radius: 8px;
+                        background-color: black;
+                        background-size: cover;
+                    }
+                }
+            }
+
+        }
         
         &#left {
             img {
@@ -25,6 +54,7 @@
                 border-radius: 10px;
                 width: 100%;
                 object-fit: cover;
+                background-color: $shade-4;
             }
         }
         
