--- a/src/style/Plan.scss
+++ b/src/style/Plan.scss
@@ -77,6 +77,15 @@
             justify-content: space-between;
 
             .section {
+                .place-section-wrapper {
+                    display: flex;
+                    flex-direction: column;
+
+                    label {
+                        margin: .4rem;
+                    }
+                }
+
                 .fields-container {
                     display: flex;
                     flex-direction: column;
